--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-ui-express": "^5.0.1"
   }
 }
